syntax = "proto3";
package dtx.core.api.v2.project;

import "google/api/annotations.proto";

service ProjectUsersData {
  rpc GetUserStatusByProjectId(GetUserStatusByProjectIdRequest) returns (GetUserStatusByProjectIdResponse) {
    option (google.api.http) = { get: "/v2/project/users/{userId}/projects/{projectId}/status" };
  }
}

message GetUserStatusByProjectIdRequest {
  int32 userId = 1;
  int32 projectId = 2;
}

message GetUserStatusByProjectIdResponse {
  int32 status = 1;
}